# OmoiOS

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  Justfile  README.md  chat_app.py  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: 2026-04-25-prod-deploy-status.md  f1-compliance-audit.txt  f2-code-quality.txt  f3-empty-state.txt  f3-integration-qa.txt  f3-smoke-summary.txt  f3-smoke-verdict.json  f4-scope-fidelity.txt  smoke-2026-04-25-modal.json  smoke-2026-04-25-prod.json  smoke-agent-platform.json  smoke-test-account-password.txt  task-1-credentials-column.md  task-10-bootstrap-fix.diff  task-10-test-results.txt  task-11-typescript-sdk.txt  task-2-build-verification.md  task-3-audit-log.txt  task-3-bearer-secret.txt  task-3-sandbox-sessions.md  task-4-credential-alias-resolution.md  task-4-environment-versions.txt  task-4-migration.txt  task-4-secret-encryption.txt  task-5-artifact-upload.txt  task-5-broker-runtime-tests.md  task-5-checksum.txt  task-5-migration.txt  task-6-broker-env-vars-tests.txt  task-6-python-sdk-mock.txt  task-6-typescript-sdk-mock.txt  task-6-typescript-strict.txt  task-7-auth-json-schema.txt  task-7-diff.patch  task-7-egress-filter.txt  task-7-retry-logic.txt  task-7-shellcheck.txt  task-8-egress-proxy-wiring.md  task-8-webhook.txt  task-9-python-sdk.txt
.sisyphus/plans/: agent-platform-gaps.md  agent-workspace-platform.md  session-ticket-decoupling.md  sessions-surface-spec-alignment.md  spec-18-alignment.md
.sisyphus/poof-state/: api_health.json  auth_whoami.json  chat_responder_fires.json  credential_find_or_create.json  env_version_bind_alias.json  environment_find_or_create.json  events_stream_terminal.json  session_create.json  session_reaches_terminal.json  workspace_find_or_create.json
backend/: CLAUDE.md  pyproject.toml  pytest.ini
backend/config/: CLAUDE.md  base.yaml  local.yaml  test.yaml
backend/omoi_os/: config.py  sandbox_worker.py
backend/scripts/: test_auth_system.py
backend/tests/: markers.py
docs/: 0. Migration Notes.md  1. Project Overview.md  2. Architecture Overview.md  3. Workflow Overview.md  7. Baseline Gaps.md  CLAUDE.md  OmoiOS_API_Reference.docx  OmoiOS_API_Reference.md  PROJECT_OVERVIEW.md  README.md  WORKFLOW_OVERVIEW.md  ai-task-estimation-prompt.md  betterstack-reference.md  go_to_market_strategy.md  hn-launch-post.md  marketing_overview.md  poof-cheatsheet.md
docs/4. Deep Dive/: backend.md  frontend.md  subsystems.md
docs/_meta/: docs-inventory.json  features.json
docs/agent-platform-analysis/: 01-executive-summary.md  02-spec-overview.md  03-current-implementation.md  04-gap-analysis.md  05-implementation-strategies.md  06-recommended-roadmap.md  07-architecture-diagrams.md  08-implementation-plan.md  README.md  client-pattern-experiments.md
docs/architecture/: 00_c4_model.md  01-planning-system.md  02-execution-system.md  03-discovery-system.md  04-readjustment-system.md  05-frontend-architecture.md  06-realtime-events.md  07-auth-and-security.md  08-billing-and-subscriptions.md  09-mcp-integration.md  10-github-integration.md  11-database-schema.md  13-api-route-catalog.md  (+11 more)
egress-proxy/: Dockerfile  go.mod  main.go  main_test.go
frontend/: CLAUDE.md
memory/: working-buffer.md
sandbox/: bootstrap.sh
scripts/: CLAUDE.md  agent_proof_of_life.py  build_omo_snapshot.py  chat_demo.py  check_asyncio_tasks.sh  local_opencode_llm_smoke.sh  mint_platform_api_key.py  modal_profile.sh  modal_sandbox_smoke.py  modal_smoke.py  opencode_chat.py  opencode_in_sandbox.py  opencode_sandbox_task.py  opencode_tour.py  pg0_up.sh  poof_probes.sh  poof_tmux.sh  poof_watch.sh  setup_local_smoke_account.py  setup_prod_smoke_account.py  smoke_agent_platform.py  stage4_chat_demo.py  stage5_full_demo.py  stream_demo.py
sdk/python/: README.md  pyproject.toml
sdk/python/omoios/: __init__.py  client.py  exceptions.py  mock_client.py  types.py
sdk/python/omoios/cli/: __init__.py  _config.py  _sdk.py  _ui.py  artifacts.py  auth.py  completion.py  config.py  connect_tui.py  connections.py  environments.py  main.py  providers.py  sessions.py  signup.py  usage.py  webhooks.py  whoami.py  workspaces.py
sdk/python/omoios/resources/: __init__.py  artifacts.py  base.py  connections.py  credentials.py  environments.py  sessions.py  usage.py  webhooks.py  workspaces.py
sdk/python/tests/: test_cancel_scope.py  test_cli.py  test_client.py  test_connections_usage.py  test_e2e_spec_patterns.py  test_integration.py  test_mock_client.py  test_no_state_anti_patterns.py  test_sessions_resource.py  test_telemetry.py
subsystems/agent-runtime/: pyproject.toml
subsystems/agent-runtime/src/agent_runtime/: __init__.py  base.py  claude_sdk.py  opencode.py
subsystems/agent-runtime/tests/: test_opencode_runtime.py  test_runtime_adapter.py
tasks/: agent-proof-of-life-plan.md  next-session-instructions.md  plan-outbox-forwarder.md  sentry-to-posthog-baseline.md  todo.md
(+550 files in other folders)
