[project]
name = "omoios-sdk"
version = "0.2.0"
description = "OmoiOS SDK for agent workspace platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "OmoiOS Team", email = "team@omoios.dev"}
]
keywords = ["omoi", "agent", "workspace", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    # CLI surface — `omoios` entry point uses Cyclopts for the nested
    # `providers / auth / signup` subcommand tree. Type-hint-driven
    # parameters with rich help generation; pulls in `rich` for the
    # Table / Panel / Confirm output we use.
    "cyclopts>=3.0",
    "rich>=13.0",
    # Cross-platform per-user app dir resolver. Powers `omoios config
    # path` and the canonical config file location — XDG on Linux,
    # `~/Library/Application Support/omoios` on macOS,
    # `%APPDATA%/omoios` on Windows.
    "platformdirs>=4.0",
    # Textual TUI — backs the `omoios sessions connect` three-zone
    # multiplayer interface (spec §18 Pattern D).
    "textual>=0.74",
    # WebSocket transport for `client.sessions.connect()` —
    # required by the connect TUI; install eagerly so the experience
    # works out of the box.
    "httpx-ws>=0.6",
]

[project.scripts]
# Terminal-first CLI surface. See omoios/cli/main.py for the command tree.
# Standing rule (memory:feedback_terminal_first): every product capability
# must work 100% from this CLI before any UI exists for it.
omoios = "omoios.cli.main:main"

[project.optional-dependencies]
# SSE streaming: `httpx-sse` backs `client.sessions.events(...)`. Not required
# for CRUD-only usage so we keep it optional.
sse = ["httpx-sse>=0.4"]
# WebSocket multiplayer: `httpx-ws` backs `client.sessions.connect(...)`.
# Chosen over raw `websockets` because it reuses our existing httpx client
# (shared connection pool, same timeouts, same auth plumbing).
ws = ["httpx-ws>=0.6"]
# Everything.
all = ["httpx-sse>=0.4", "httpx-ws>=0.6"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx-sse>=0.4",
    "httpx-ws>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omoios"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that require a live backend + real Daytona (gated on env vars)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
